--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'Varela';
+  src: url('./VarelaRound-Regular.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+}
+
 .hello {
   color: red;
+  font-family: 'Varela';
 }
