--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,63 @@
   font-style: normal;
 }
 
-.hello {
-  color: red;
+* {
   font-family: 'Varela';
+}
+
+main {
+  display: flex;
+  justify-content: space-around;
+}
+
+#recent-scores .top {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  align-items: center;
+}
+
+#recent-scores button {
+  border: solid black 1px;
+  border-radius: 0;
+  background-color: transparent;
+  box-shadow: 2px 2px rgb(0, 0, 0);
+}
+
+#scores-list {
+  border: solid black 2px;
+  list-style: none;
+  padding-inline-start: 0;
+}
+
+#scores-list li {
+  padding: 5px 15px;
+}
+
+li:nth-child(even) {
+  background: #ccc;
+}
+
+li:nth-child(odd) {
+  background: #fff;
+}
+
+#scores-form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+#scores-form input {
+  border: solid black 1px;
+  background-color: transparent;
+  height: 30px;
+}
+
+#scores-form input:last-child {
+  align-self: flex-end;
+  border: solid black 1px;
+  border-radius: 0;
+  box-shadow: 2px 2px rgb(0, 0, 0);
+  height: initial;
 }
