--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,7 @@
 body {
   background-image: url(./elden_ring.jpg);
   background-size: cover;
+  background-position: top center;
   background-repeat: no-repeat;
   color: var(--white);
 }
@@ -25,11 +26,13 @@ body {
 h1 {
   text-align: center;
   text-decoration: underline;
+  margin-bottom: 15vh;
 }
 
 main {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding: 0 15vw;
 }
 
 #recent-scores .top {
